--- a/AnotherDemo/AnotherDemo/AnotherDemo.csproj
+++ b/AnotherDemo/AnotherDemo/AnotherDemo.csproj
@@ -75,6 +75,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="DemoExmaplePageHtml.html" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
